# address_manipulation

./: .gitignore  README.md  README.rst  address.ipynb  pyproject.toml
elixir/: address_manipulation.exs
