[tool.poetry]
name = "address_manipulation"
version = "0.1.0"
description = ""
authors = ["Destry Saul <destrys@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
base58 = "^2.0.1"
bech32 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
